--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 dj-database-url==1.0.0
 Django==4.1
+django-debug-toolbar==3.6.0
 django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==9.2.0
